# BE_Robotique

./: Caher_Charges.tex  README.md  page1.tex  rapport.tex
Ros2_raspi/src/robo_control/: readme  servo_contrile.py  servo_control.py  setup.py  trajectory_planner.py
similation_mearm/src/: package.xml  setup.py
similation_mearm/src/control/: ball_publisher.py  marker_ball_publisher.py  move_arm_to_ball.py
similation_mearm/src/launch/: display.launch.py
similation_mearm/src/urdf/: ball.urdf.xacro  robot.urdf,xacro
