<?xml version="1.0"?>
<package format="3">
  <name>mearm_model</name>
  <version>0.0.0</version>
  <description>MeArm robot model with URDF, launch, and Python nodes</description>

  <maintainer email="ahmed@example.com">ahmed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
